--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
 <app-header></app-header>
 <h1>Hola mundo</h1>
 <section class="ae-container-fluid rk-main">
-    <app-portafolio></app-portafolio>
+    <!--app-portafolio></app-portafolio-->
+    <app-about></app-about>
 </section>
 <app-footer></app-footer>
 <router-outlet></router-outlet>
