--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-header></app-header>
 <h1>Hola mundo</h1>
-<section class="ae-container-fluid rk-main">
+<section class="ae-container-fluid ae-container-fluid rk-main">
     <!--app-portafolio></app-portafolio-->
-    <app-about></app-about>
+    <!--app-about></app-about-->
+    <!--app-docs></app-docs-->
+    <!--app-contact></app-contact-->
+    <app-producto></app-producto>
 </section>
 <app-footer></app-footer>
 <router-outlet></router-outlet>
