--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,8 @@
     <!--app-about></app-about-->
     <!--app-docs></app-docs-->
     <!--app-contact></app-contact-->
-    <app-producto></app-producto>
+    <!--app-producto></app-producto-->
+    <router-outlet></router-outlet>
 </section>
 <app-footer></app-footer>
-<router-outlet></router-outlet>
+
